--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "build": "gridsome build"
   },
   "dependencies": {
-    "gridsome": "^0.7.0"
+    "@gridsome/source-filesystem": "0.6.2",
+    "@gridsome/transformer-remark": "0.4.0",
+    "gridsome": "^0.7.0",
+    "gridsome-plugin-netlify-cms": "1.0.9",
+    "netlify-cms": "2.9.7"
   }
 }
