--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: github
-  repo: princyraza/gridsome-starter-default
+  name: git-gateway
+  accept_roles: #optional - accepts all users if left out
+    - admin
+    - editor
 
 media_folder: "static/uploads"
 public_folder: "/uploads"
